@@ -49,9 +49,9 @@ import static fj.data.List.range;
     //TODO: Maybe pop this up a level
     public final boolean choosingSettings;
 
-    public static MatchingGameState initialState() { return initialState( 1 ); }
+    public static MatchingGameState initialState() { return newLevel( 1 ); }
 
-    public static MatchingGameState initialState( int level ) {
+    public static MatchingGameState newLevel( int level ) {
         final List<Cell> cells = createCells( 100, 415 + 12, 130, 120, 6, 2, 0, 0 );
         final List<Cell> scoreCells = createCells( 10, 12, 155, 90, 6, 1, 10, 0 );
         return new MatchingGameState( Levels.get( level ).f( cells ), cells, scoreCells, 0, 0, 0, level, false, true );
